--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><b>&lt;!DOCTYPE html&gt;</b></span></p>
-<p class="p2"><span class="s2">&lt;html&gt;</span></p>
-<p class="p2"><span class="s2">&lt;/html&gt;</span></p>
+<p class="p1"><span class="s1"></span>PORTO LOL</p>
 </body>
 </html>
