--- a/LOL_1/index.html
+++ b/LOL_1/index.html
@@ -12,6 +12,8 @@
     </script>
   </head>
   <body>
+    <center>
     <div id="gameContainer" style="width: 1024px; height: 576px; margin: auto"></div>
+    </center>
   </body>
 </html>
