--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                     </figure>
                             
                             <div class="entry-content flex flex-column align-items-center justify-content-center">
-                                <h3><a href="https://ideasender.github.io/LOL_1">Play! Running Goats</a></h3>
+                                <h3><a href="https://ideasender.github.io/PORTO_LOL_1">Play! Running Goats</a></h3>
                                 
                                 <ul class="flex flex-wrap justify-content-center">
                                     <li><a href="#">Just Run, </a></li>
