--- a/PORTO_LOL_1/index.html
+++ b/PORTO_LOL_1/index.html
@@ -8,7 +8,7 @@
     <script src="https://game-cdn.legendsoflearning.com/assets/lol.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/LOL_1.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/PORTO_LOL_1.json");
     </script>
   </head>
   <body>
