--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                     </figure>
                             
                             <div class="entry-content flex flex-column align-items-center justify-content-center">
-                                <h3><a href="https://ideasender.github.io/PORTO_LOL_2" target="_blank">Play! FGarden Family</a></h3>
+                                <h3><a href="https://ideasender.github.io/PORTO_LOL_2" target="_blank">Play! Garden Family</a></h3>
                                 
                                 <ul class="flex flex-wrap justify-content-center">
                                     <li><a href="#">Let's grow your pets</a></li>
