--- a/GameJam_Indigo/index.html
+++ b/GameJam_Indigo/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
@@ -15,11 +15,6 @@
   <body>
     <div class="webgl-content">
       <div id="unityContainer" style="width: 600px; height: 1024px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">GameJam_Indigo_Project</div>
-      </div>
     </div>
   </body>
 </html>
