--- a/FoodWeb_V2/index.html
+++ b/FoodWeb_V2/index.html
@@ -8,7 +8,7 @@
     <script src="https://game-cdn.legendsoflearning.com/assets/lol.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/FoodWeb_Build.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/FoodWeb.json");
     </script>
   </head>
   <body>
