--- a/Moola/index.html
+++ b/Moola/index.html
@@ -15,9 +15,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Moola.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Moola.data.br",
-        frameworkUrl: buildUrl + "/Moola.framework.js.br",
-        codeUrl: buildUrl + "/Moola.wasm.br",
+        dataUrl: buildUrl + "/Moola.data.gz",
+        frameworkUrl: buildUrl + "/Moola.framework.js.gz",
+        codeUrl: buildUrl + "/Moola.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Ideasender",
         productName: "Moola",
