--- a/FoodWeb_V2/index.html
+++ b/FoodWeb_V2/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Legends of Learning | Food Webs</title>
+    <title>Legends of Learning | %UNITY_WEB_NAME%</title>
     <link rel="stylesheet" href="https://game-cdn.legendsoflearning.com/assets/lol.css" />
     <script src="https://game-cdn.legendsoflearning.com/assets/lol.js"></script>
-    <script src="Build/UnityLoader.js"></script>
+    <script src="%UNITY_WEBGL_LOADER_URL%"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/FoodWeb.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "%UNITY_WEBGL_BUILD_URL%");
     </script>
   </head>
   <body>
-    <div id="gameContainer" style="width: 1024px; height: 576px; margin: auto"></div>
+    <div id="gameContainer" style="width: %UNITY_WIDTH%px; height: %UNITY_HEIGHT%px; margin: auto"></div>
   </body>
 </html>
