--- a/FoodWeb_V2/index.html
+++ b/FoodWeb_V2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Legends of Learning | Testing</title>
+    <title>Legends of Learning | Food Webs</title>
     <link rel="stylesheet" href="https://game-cdn.legendsoflearning.com/assets/lol.css" />
     <script src="https://game-cdn.legendsoflearning.com/assets/lol.js"></script>
   </head>
@@ -13,15 +13,15 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Testing.loader.js";
+      var loaderUrl = buildUrl + "/FoodWeb_1_5.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Testing.data.gz",
-        frameworkUrl: buildUrl + "/Testing.framework.js.gz",
-        codeUrl: buildUrl + "/Testing.wasm.gz",
+        dataUrl: buildUrl + "/FoodWeb_1_5.data",
+        frameworkUrl: buildUrl + "/FoodWeb_1_5.framework.js",
+        codeUrl: buildUrl + "/FoodWeb_1_5.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Ideasender",
-        productName: "Testing",
-        productVersion: "0.1",
+        companyName: "PoerSheep",
+        productName: "Food Webs",
+        productVersion: "1.0",
       };
 
       var container = document.querySelector("#unity-container");
