--- a/Moola/index.html
+++ b/Moola/index.html
@@ -13,11 +13,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Moola.loader.js";
+      var loaderUrl = buildUrl + "/Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Moola.data",
-        frameworkUrl: buildUrl + "/Moola.framework.js",
-        codeUrl: buildUrl + "/Moola.wasm",
+        dataUrl: buildUrl + "/Build.data",
+        frameworkUrl: buildUrl + "/Build.framework.js",
+        codeUrl: buildUrl + "/Build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Ideasender",
         productName: "Moola",
