--- a/AnimalGroup/index.html
+++ b/AnimalGroup/index.html
@@ -15,9 +15,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/AnimalGroup.loader.js";
       var config = {
-        dataUrl: buildUrl + "/AnimalGroup.data.gz",
-        frameworkUrl: buildUrl + "/AnimalGroup.framework.js.gz",
-        codeUrl: buildUrl + "/AnimalGroup.wasm.gz",
+        dataUrl: buildUrl + "/AnimalGroup.data",
+        frameworkUrl: buildUrl + "/AnimalGroup.framework.js",
+        codeUrl: buildUrl + "/AnimalGroup.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "legends-of-learning-unity-example-v2",
